# kairos-ai

./: .eslintrc.js  .flake8  .gitignore  README.md  eslint.config.js  eslint.config.mjs  fix_ssl_warning.sh  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_hallucination.py  tsconfig.json  vite.config.ts  vitest.config.ts
config/: prompt.yaml
src/: App.tsx  main.tsx
src/components/: ErrorBoundary.tsx  index.ts
src/components/chat/: ChatInterface.tsx  index.ts
src/components/chat/__tests__/: ChatInterface.test.tsx
src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
src/components/spellbook/: AddMemoryForm.tsx  MemoryCard.tsx  MemoryList.tsx  index.ts
src/components/ui/: Button.tsx  index.ts
src/constants/: config.ts  contact.ts  navigation.ts
src/hooks/: index.ts  useNavigation.ts
src/pages/: About.tsx  Chat.tsx  History.tsx  Persona.tsx  Spellbook.tsx
src/python/: api_server.py  kairos-ai.py  kairos_ai.py  luna-ai.py  prompt.yaml  the-spellbook.json
src/python/database/: __init__.py  connection.py  models.py  operations.py  schema.sql
src/python/migrations/: __init__.py  migrate_json_to_sqlite.py
src/python/tests/: __init__.py  test_api.py  test_api_server.py  test_core_operations.py  test_database_integration.py  test_hallucination.py  test_migration.py  test_models.py  test_operations.py
src/python/utils/: __init__.py
src/services/: api.ts  chatService.ts  memoryService.ts
src/styles/: globals.css
src/tests/components/chat/: ChatInterface.test.tsx
src/tests/components/layout/: Header.test.tsx
src/tests/pages/: Chat.test.tsx
src/ts/: models.ts
src/types/: index.ts
src/utils/: constants.ts  helpers.ts  validation.ts
tests/: run_tests.py  test_api_quick.py  test_config.py  test_core.py  test_data.py  test_kairos_system.py
